--- a/index.html
+++ b/index.html
@@ -184,12 +184,9 @@
       <div class="navbar-logo">
         <img src="https://avatars.githubusercontent.com/u/161966183?s=400&u=31eace7386cd10628e198e2e87dcbfdcc3800155&v=4" alt="Logo" />
       </div>
-      <a href="https://sharpint.github.io" class="navbar-title">Home</a>
+      <a href="https://deltapapus.github.io" class="navbar-title">Home</a>
       <div class="navbar-categories">
-        <a href="https://sharpint.github.io/docs" class="navbar-link">Docs</a>
-        <a href="https://sharpint.github.io/info" class="navbar-link">Info</a>
-        <a href="https://sharpint.github.io/sm" class="navbar-link">Social Media</a>
-        <a href="https://sharpint.github.io/drshitpost" class="navbar-link">DR Shitpost</a>
+        <a href="https://discord.gg/3rqcQjXFBW" class="navbar-link">Discord</a>
       </div>
     </div>
     <div class="navbar-right">
@@ -199,17 +196,17 @@
   </nav>
 
   <div class="container">
-    <h1>* DeltaPapus</h1>
-    <h2>* Hi, this is my website, do u like it?</h2>
-    <b>* Well if u like it, remember to visit the other sections!</b>
-    <p>Goodbye and have fun reading my website!</p>
+    <h1>DeltaPapus</h1>
+    <h2>Hola!, si no nos conoces:</h2>
+    <b>Somos un server de discord para socializar sobre</b>
+    <p>DELTARUNE y otros juegos de Toby Fox!</p>
   </div>
 
   <div class="container">
-    <h1></h1>
-    <h2></h2>
-    <b></b>
-    <p></p>
+    <h1>Ahora que?</h1>
+    <h2>En esta página puedes:</h2>
+    <b>Ver los miembros del staff, cambios recientes y otras cositas.</b>
+    <p>zzz</p>
   </div>
   <footer>© 2025 SharpINT Team</footer>
 </body>
