--- a/index.html
+++ b/index.html
@@ -142,6 +142,23 @@
     color: #8aff80;
   }
 
+   .discord-link {
+    color: #8aff80;
+    text-decoration: none;
+    transition: text-decoration 0.2s ease;
+   }
+
+   .discord-link:hover {
+    text-decoration: underline;
+  }
+   .hyperlink-link {
+    color: #8aff80;
+    text-decoration: none;
+    transition: text-decoration 0.2s ease;
+   }
+   .hyperlink-link:hover {
+    text-decoration: underline;
+   }
 
     /* Main headings */
     h1, h2, b {
@@ -252,7 +269,7 @@
     <b>Opciones: Tassingg, Nomik</b>
     <p>Solamente en el server de discord, link abajo</p>
     <a href="https://discord.gg/3rqcQjXFBW" target="_blank">
-     <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Ir a Discord" width="50">
+     <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Ir a Discord" class="hyperlink-link" width="50">
     </a>  
   </div>
   <br>
