--- a/index.html
+++ b/index.html
@@ -366,7 +366,18 @@
     Envien fotos de pies.
    </div>
   </div>
+
+  <br>  
+  <h2>Juego de Roblox</h2>
+  <div class="container discord-info">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Roblox_Logo_2022.svg/250px-Roblox_Logo_2022.svg.png" alt="Roblox Logo" class="discord-logo">
+  <div class="discord-text">
+    <b><a href="https://www.roblox.com/games/110309027263228/DELTApapus-el-juego" target="_blank" rel="noopener noreferrer" class="discord-link">Roblox</a></b><br>
+    Jueguito pa que jueguen.
+   </div>
+  </div>
   <br>
+  <h2>Redes:</h2>
   <div class="discord-box">
    <h1>Mensaje Anonimo</h1>
    <textarea id="msgContent" placeholder="Escribe tu mensaje..." rows="4"></textarea>
