--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
   <div class="container discord-info">
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Roblox_Logo_2022.svg/250px-Roblox_Logo_2022.svg.png" alt="Roblox Logo" class="discord-logo">
   <div class="discord-text">
-    <b><a href="https://www.roblox.com/games/110309027263228/DELTApapus-el-juego" target="_blank" rel="noopener noreferrer" class="discord-link">Roblox</a></b><br>
+    <b><a href="https://www.roblox.com/games/110309027263228/DELTApapus-el-juego" target="_blank" rel="noopener noreferrer" class="discord-link">Jueguito de Roblox</a></b><br>
     Jueguito pa que jueguen.
    </div>
   </div>
