--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
       box-sizing: border-box;
     }
     body {
+      background-image: url('https://https://cdn.discordapp.com/attachments/1408976298847764540/1416204817671389347/VID-20250501-WA0002.mp4?ex=68c6a7c4&is=68c55644&hm=0375f6a099b59d0a3a49a5c8be1ce19ed562d037477fecdaf902633bedd152f9&'); /* <-- tu imagen aquí */
+      background-size: cover; /* hace que cubra toda la pantalla */
+      background-position: center; /* la centra nice */
+      background-repeat: no-repeat; /* no se repite en mosaico */
       margin: 0;
+      height: 100vh; /* asegúrate que ocupe toda la pantalla */
       background: linear-gradient(135deg, #11121a, #0a0b10);
       color: #c8c8c8;
       font-family: 'Ubuntu Mono', monospace;
