--- a/404.html
+++ b/404.html
@@ -286,116 +286,9 @@
       <button class="navbar-icon" title="Search">🔍</button>
       <button class="navbar-icon" title="Add">➕</button>
     </div>
+    <div class="container">
+        <h1>Hola csm</h1>
+        <h2>Te perdiste por pendej!to</h2>
+        <b>Jjajajajasjjaajsdj</b>
+    </div>
   </nav>
-
-  <div class="container">
-    <h1>DeltaPapus</h1>
-    <h2>Hola!, si no nos conoces:</h2>
-    <b>Somos un server de discord para socializar sobre DELTARUNE y otros juegos de Toby Fox!</b>
-    <p></p>
-  </div>
-  <br>
-  <div class="container">
-    <h1>Ahora que?</h1>
-    <h2>En esta página puedes:</h2>
-    <b>Ver los miembros del staff, cambios recientes y otras cositas que agreguemos.</b>
-    <p>Tip: Arriba donde dice Discord obviamente te unes al Discord!</p>
-  </div>
-  <br>
-  <h2>Canales del Servidor Esenciales:</h2>
-  <div class="container discord-info">
-  <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
-  <div class="discord-text">
-    <b><a href="https://discord.com/channels/1408971645569335420/1408980366416412776" target="_blank" rel="noopener noreferrer" class="discord-link">Anuncios</a></b><br>
-    Pa q te enteres
-   </div>
-  </div>
-  <br>
-  <div class="container discord-info">
-  <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
-  <div class="discord-text">  
-    <b><a href="https://discord.com/channels/1408971645569335420/1408995249539383478" target="_blank" rel="noopener noreferrer" class="discord-link">Autoroles</a></b><br>
-    Customiza pe
-   </div>
-  </div>
-  <br>
-  <div class="container discord-info">
-  <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
-  <div class="discord-text">
-    <b><a href="https://discord.com/channels/1408971645569335420/1408974368977059980" target="_blank" rel="noopener noreferrer" class="discord-link">Reglas</a></b><br>
-    Reglas como dice el nombre
-   </div>
-  </div>
-  <br>
-  <div class="container discord-info">
-  <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
-  <div class="discord-text">
-    <b><a href="https://discord.com/channels/1408971645569335420/1409216784963342597" target="_blank" rel="noopener noreferrer" class="discord-link">Aliados</a></b><br>
-    Aliados del Servidor
-   </div>
-  </div>
-  <br>
-  <div class="container discord-info">
-  <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
-  <div class="discord-text">
-    <b><a href="https://discord.com/channels/1408971645569335420/1408999982564114472" target="_blank" rel="noopener noreferrer" class="discord-link">General</a></b><br>
-    Aqui e donde tu empieza a chatear
-   </div>
-  </div>
-  <br>
-    <div class="container discord-info">
-  <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
-  <div class="discord-text">
-    <b><a href="https://discord.com/channels/1408971645569335420/1409000096200392715" target="_blank" rel="noopener noreferrer" class="discord-link">Momos</a></b><br>
-    Me parte de la risa
-   </div>
-  </div>
-  <br>
-    <div class="container discord-info">
-  <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
-  <div class="discord-text">
-    <b><a href="https://discord.com/channels/1408971645569335420/1409000173048430752" target="_blank" rel="noopener noreferrer" class="discord-link">Multimedia</a></b><br>
-    Envien fotos de pies.
-   </div>
-  </div>
-
-  <br>  
-  <h2>Juego de Roblox</h2>
-  <div class="container discord-info">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Roblox_Logo_2022.svg/250px-Roblox_Logo_2022.svg.png" alt="Roblox Logo" class="discord-logo">
-  <div class="discord-text">
-    <b><a href="https://www.roblox.com/games/110309027263228/DELTApapus-el-juego" target="_blank" rel="noopener noreferrer" class="discord-link">Jueguito de Roblox</a></b><br>
-    Jueguito pa que jueguen.
-   </div>
-  </div>
-  <br>
-  <h2>Redes:</h2>
-  <div class="discord-box">
-   <h1>Mensaje Anonimo</h1>
-   <button id="sendMsg">Enviar mensaje al Servidor.</button>
-  </div>
-  </body>
-  <script>
-const webhookURL = 'https://discord.com/api/webhooks/1416438678607364186/2GPRfqqXCOwFRlEH4f3sMkwq-VTt81zaoA_eAlCG8MPp2R_Al42xtUp0ZTyX3fPYBICg';
-
-/* NUEVO: */
-document.getElementById('sendMsg').addEventListener('click', () => {
-    fetch(webhookURL, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({
-            content: '**zzz :zzz:**',
-            username: 'el que lee es un microbio',
-            avatar_url: 'https://cdn.discordapp.com/attachments/1408999982564114472/1416571017589162185/descarga_1.gif?ex=68c75411&is=68c60291&hm=6c82fdf2e93eb8099bd00d0e49c5d85b3ad3f60b38920995b11c7c8264fe5dc7&'
-        })
-    })
-    .then(res => {
-        if(res.ok) alert('Mensaje enviado!');
-        else throw new Error('Error al enviar mensaje');
-    })
-    .catch(error => alert(error.message));
-});
-
-</script>
-</html>
-
